--- a/estilo.css
+++ b/estilo.css
@@ -121,3 +121,35 @@ ul{
     text-decoration: underline;
 }
 
+
+/*Carsd banner one*/
+.cards-banner-one{
+    width:100%;
+    height: 350px;
+    background: url(./img/tech-red.jpg);
+    margin-bottom: 40px;
+}
+
+.cards-banner-one .content{
+    width:40%;
+    padding: 90px 0 0 30px;
+    color:#ffffff;
+}
+
+.cards-banner-one p,
+.cards-banner-one h2{
+    margin: 10px 0 20px 0;
+}
+
+/*Cards banner two*/
+.cards-banner-two{
+    width: 100%;
+    height: 350px;
+    background: url('./img/image-five.jpg') no-repeat center center/cover;
+
+}
+.cards-banner-two .content{
+    width:50%;
+    padding: 100px 0 0 30px;
+    color:#ffffff;
+}
